--- a/components/_main.scss
+++ b/components/_main.scss
@@ -13,9 +13,13 @@ body {
     background-color: $bgfondo;
     background-size: cover;
     font-style: initial;
+    
 }
 
 // main
+main{
+    min-height: calc(100vh - 205px);
+}
 
 iframe {
     border: 2px solid black;
@@ -25,6 +29,8 @@ iframe {
 
 
 }
+
+
 
 p {
     color: white;
@@ -36,6 +42,17 @@ p {
     animation-name: zoom;
     animation-duration: 2s;
     animation-iteration-count: alternate;
+
+}
+
+.parrafo-ul {
+    text-shadow: 1px 1px 2px rgb(170, 96, 96);
+    font-family: 'Beau Rivage', cursive;
+    color: rgb(10, 10, 10);
+    font-size: 35px;
+    letter-spacing: 2px;
+    line-height: 50px;
+
 
 }
 
@@ -59,22 +76,16 @@ p {
 .galeria__panificados {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 140px;
+    grid-auto-rows: 500px;
     grid-template-areas:
         "ele1 ele2 ele3"
-        "ele1 ele2 ele3"
         "ele4 ele4 ele5"
-        "ele4 ele4 ele5"
-        "ele6 ele6 ele5"
         "ele6 ele6 ele5";
     padding: 1rem;
     column-gap: 1rem;
     row-gap: 2rem;
 
-    img {
-        @extend .imagen;
 
-    }
 
     .grid__titulo {
         @extend .tituloimg;
@@ -88,27 +99,41 @@ p {
 
     .galeria__item-1 {
         grid-area: ele1;
+        @extend .hoverimg;
 
     }
 
     .galeria__item-2 {
         grid-area: ele2;
+        @extend .hoverimg;
     }
 
     .galeria__item-3 {
         grid-area: ele3;
+        @extend .hoverimg;
     }
 
     .galeria__item-4 {
         grid-area: ele4;
+        @extend .hoverimg;
     }
 
     .galeria__item-5 {
         grid-area: ele5;
+        @extend .hoverimg;
     }
 
     .galeria__item-6 {
         grid-area: ele6;
+        @extend .hoverimg;
+    }
+
+    .galeria__img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        
+
     }
 }
 
@@ -117,25 +142,17 @@ p {
 .galeria {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 120px;
+    grid-auto-rows: 500px;
     grid-template-areas:
         "ele1 ele2 ele3"
-        "ele1 ele2 ele3"
-        "ele4 ele4 ele5"
         "ele4 ele4 ele5"
         "ele6 ele6 ele5"
-        "ele6 ele6 ele5"
         "ele7 ele8 ele8"
-        "ele7 ele8 ele8"
-        "ele7 ele9 ele9"
         "ele7 ele9 ele9";
     padding: 15px;
     column-gap: 1rem;
     row-gap: 2rem;
 
-    img {
-        @extend .imagen;
-    }
 
     .grid__titulo {
         @extend .titulo;
@@ -148,38 +165,47 @@ p {
 
     &__item--1 {
         grid-area: ele1;
+        @extend .hoverimg;
     }
 
     &__item--2 {
         grid-area: ele2;
+        @extend .hoverimg;
     }
 
     &__item--3 {
         grid-area: ele3;
+        @extend .hoverimg;
     }
 
     &__item--4 {
         grid-area: ele4;
+        @extend .hoverimg;
     }
 
     &__item--5 {
         grid-area: ele5;
+        @extend .hoverimg;
     }
 
     &__item--6 {
         grid-area: ele6;
+        @extend .hoverimg;
     }
 
     &__item--7 {
         grid-area: ele7;
+        @extend .hoverimg;
     }
 
     &__item--8 {
         grid-area: ele8;
+        @extend .hoverimg;
     }
 
     &__item--9 {
         grid-area: ele9;
+        @extend .hoverimg;
     }
 
     .grid__titulo-1 {
@@ -191,10 +217,18 @@ p {
         @extend .galeriatitulo;
 
     }
+
+    .galeria__img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        
+
+    }
 }
+
+
 .animaciones:hover img {
-    width: 100%;
-    height: 100%;
     transform: scale(1.05);
     transition: all 2s;
 }
@@ -261,4 +295,18 @@ p {
         line-height: 50px;
     }
 
+
+}
+
+// Contacto 
+.botones {
+    background-color: rgba(204, 46, 144, 0.836);
+    color: white;
+
+}
+
+.msj {
+    color: rgba(243, 14, 155, 0.836);
+    text-shadow: 2px 2px 1px black;
+    font-size: 20px;
 }
