--- a/components/_mediaq.scss
+++ b/components/_mediaq.scss
@@ -1,10 +1,5 @@
 @media screen and (max-width: 768px) {
 
-    .nav {
-        a {
-            font-size: 20px
-        }
-    }
 
     .galeria__titulo {
         font-size: 22px;
@@ -22,7 +17,7 @@
             "ele5 ele6";
     }
 
-    .galeria__pasteleria {
+    .galeria {
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 340px;
         grid-template-areas:
@@ -52,19 +47,7 @@
 }
 
 @media screen and (max-width: 600px) {
-    .nav {
-        display: none;
-
-
-
-        &--toggle {
-            color: #ffffff;
-            background: none;
-            border: none;
-            font-size: 30px;
-            display: inline-block;
-        }
-    }
+    
 
     .galeria__titulo {
 
@@ -85,21 +68,6 @@
 @media screen and (max-width: 425px) {
 
 
-    .nav {
-        display: none;
-    }
-
-
-    .nav--toggle {
-        color: #030303d0;
-        background: none;
-        border: none;
-        font-size: 30px;
-        display: inline-block;
-    }
-
-
-
     .subtitulo {
         text-align: left;
         font-size: 20px;
@@ -118,14 +86,24 @@
     .parrafo {
         font-family: Arial, Helvetica, sans-serif;
         width: 100%;
-        height: 62%;
         font-size: 18px;
         font-weight: 800;
-        line-height: 1.3rem;
-        letter-spacing: 1.4px;
+        line-height: 1.4rem;
         color: rgb(26, 25, 25);
+        
 
-
+    }
+    .parrafo-ul{
+        text-shadow: 1px 1px 2px rgb(170, 96, 96);
+        font-family: Arial, Helvetica, sans-serif;
+        width: 100%;
+        height: 80%;
+        font-size: 18px;
+        font-weight: 800;
+        line-height: 1.4rem;
+        color: rgb(26, 25, 25);
+    
+    
     }
 
     iframe {
@@ -134,9 +112,8 @@
         margin: 0;
         height: 300px;
         
-        
-
     }
+
 
     .galeria__panificados {
         grid-template-columns: 1fr;
@@ -220,19 +197,4 @@
         }
     }
 
-    /* CONTACTO  */
-    .grid__contacto {
-        width: 100%;
-        max-width: 400px;
-        grid-template-columns: 1fr;
-        row-gap: 2rem;
-        grid-auto-rows: 500px;
-        grid-template-rows: 20% 40% 40%;
-        grid-template-areas:
-            "ele1"
-            "ele3"
-            "ele2";
-
-
-    }
 }
