--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -6,10 +6,8 @@ $fontnav: 25px;
 
 // extend
 
-.imagen {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+
+.hoverimg{
     border: 2px solid rgba(15, 11, 11, 0.966);
     border-radius: 1rem;
 }
@@ -18,7 +16,6 @@ $fontnav: 25px;
 .galeriatitulo {
     font-size: 30px;
     color: rgb(226, 160, 160);
-    // text-shadow: 0.1em 0.1em 0.1em rgb(17, 17, 4);
     text-shadow: $textshadow;
     position: absolute;
     position: center;
@@ -32,6 +29,7 @@ $fontnav: 25px;
     position: relative;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 // mixin
@@ -49,7 +47,6 @@ $fontnav: 25px;
 
 @mixin titulo($fontsize) {
     color: rgba(90, 83, 83, 0.671);
-    // -webkit-text-stroke: 1px rgb(228, 21, 21);
     text-shadow: 2px 2px 3px rgb(230, 11, 146);
     font-size: $fontsize;
     font-weight: bold;
